--- a/recipes/udon.html
+++ b/recipes/udon.html
@@ -29,5 +29,17 @@
         <li>green onion for topping</li>
     </ul>
 
+    <h3>Instructions</h3>
+    <ol>
+        <li>In medium saucepan, add dashi, mirin, sugar, 
+            soy sauce, and pich of salt</li>
+        <li>Bring sauce pan to gentle simmer, once simmering remove from
+            heat, cover and set aside</li>
+        <li>In a large pot of boiling water add udon noodles</li>
+        <li>stir noodles so they wont stick</li>
+        <li>once noodles are cooked drain and rinse noodles under cold 
+            water</li>
+        <li>Serve noodles with broth and top with green onion</li>
+    </ol>
 </body>
 </html>
