add img, headers
added image of campbells chicken noodle soup and added main header and header for recipes

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Recipes</title>
+    <title>Campbells Noodle Diaries</title>
 </head>
 <body>
+    <h1>Collection of Noodles From Around The World</h1>
+    <img src="https://d7hftxdivxxvm.cloudfront.net/?height=800&quality=85&resize_to=fit&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FBvNJDAqZWpKdnSSzunIhAg%2Fnormalized.jpg&width=517"
+    rel="campbells chicken noodle soup can">
+    <h4>Recipes</h4>
     <a href="recipes/udon.html">Udon</a>
 </body>
 </html>
