--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -23,6 +23,30 @@
         <li>3 1/2 oz of guanciale</li>
         <li>12 oz of spaghetti</li>
     </ul>
+
+    <h3>Instructions</h3>
+    <ol>
+        <li>Place a large pot of lightly salted water (no more than 1 
+            tablespoon salt) over high heat, and bring to a boil. 
+            Fill a large bowl with hot water for serving, and set aside.
+        </li>
+        <li>
+            In a mixing bowl, whisk together the eggs, yolks and pecorino 
+            and Parmesan. Season with a pinch of salt and generous black pepper.
+        </li>
+        <li>Set the water to boil. Meanwhile, heat oil in a large skillet over medium heat, 
+            add the pork, and sauté until the fat just renders, 
+            on the edge of crispness but not hard. Remove from heat 
+            and set aside.</li>
+        <li>Add pasta to the water and boil until a bit firmer than al dente. Just 
+            before pasta is ready, reheat guanciale in skillet, if needed. Reserve 1 
+            cup of pasta water, then drain pasta and add to the skillet over low heat.
+             Stir for a minute or so.</li>
+        <li>Empty serving bowl of hot water. Dry it and add hot pasta mixture. Stir 
+            in cheese mixture, adding some reserved pasta water if needed for creaminess. 
+            Serve immediately,dressing it with a bit of additional grated pecorino 
+            and pepper.</li>
+    </ol>
     
 </body>
 </html>
