added link to mi goreng

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h4>Recipes</h4>
     <a href="recipes/udon.html">Udon</a>
     <a href="recipes/carbonara.html">Carbonara</a>
+    <a href="recipes/mie-goreng.html">Mi Goreng</a>
 </body>
 </html>
