--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campbells Noodle Diaries</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1>Collection of Noodles From Around The World</h1>
+    <p class="h1">Collection of Noodles From Around The World<p>
     <img src="https://d7hftxdivxxvm.cloudfront.net/?height=800&quality=85&resize_to=fit&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FBvNJDAqZWpKdnSSzunIhAg%2Fnormalized.jpg&width=517"
     rel="campbells chicken noodle soup can">
-    <h4>Recipes</h4>
-    <a href="recipes/udon.html">Udon</a>
-    <a href="recipes/carbonara.html">Carbonara</a>
-    <a href="recipes/mie-goreng.html">Mi Goreng</a>
+    <h4 class="h2 recipes">Recipes</h4>
+    <a href="recipes/udon.html" class="link">Udon</a>
+    <a href="recipes/carbonara.html" class="link">Carbonara</a>
+    <a href="recipes/mie-goreng.html" class="link">Mi Goreng</a>
 </body>
 </html>
