--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <p class="h1">Collection of Noodles From Around The World<p>
-    <img src="https://d7hftxdivxxvm.cloudfront.net/?height=800&quality=85&resize_to=fit&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FBvNJDAqZWpKdnSSzunIhAg%2Fnormalized.jpg&width=517"
-    rel="campbells chicken noodle soup can">
     <h4 class="h2 recipes">Recipes</h4>
-    <a href="recipes/udon.html" class="link">Udon</a>
-    <a href="recipes/carbonara.html" class="link">Carbonara</a>
-    <a href="recipes/mie-goreng.html" class="link">Mi Goreng</a>
-</body>
+        <a href="recipes/udon.html" class="link">Udon</a>
+        <a href="recipes/carbonara.html" class="link">Carbonara</a>
+        <a href="recipes/mie-goreng.html" class="link">Mi Goreng</a>
+    <img class="soup-can" src="https://d7hftxdivxxvm.cloudfront.net/?height=800&quality=85&resize_to=fit&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FBvNJDAqZWpKdnSSzunIhAg%2Fnormalized.jpg&width=517"
+    rel="campbells chicken noodle soup can">
+    </body>
 </html>
